--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v4.6.0
     hooks:
       - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
       - id: check-yaml
       - id: end-of-file-fixer
   - repo: https://github.com/timothycrosley/isort
@@ -26,3 +27,8 @@ repos:
     hooks:
       - id: black
         additional_dependencies: ['click==8.0.4']
+  - repo: https://github.com/jorgenusan/pydepcheck.git
+    rev: v0.1.3
+    hooks:
+      - id: pydepcheck
+        args: ['--env-file', 'requirements.txt', '--env-name', 'pydepcheck']
