--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ install_requires =
     loguru==0.7.2
     pytest==8.2.2
     fire==0.6.0
+    pathlib==1.0.1
 
 [options.packages.find]
 exclude =
