--- a/examples/config_manipulation.json
+++ b/examples/config_manipulation.json
@@ -3,5 +3,9 @@
       "file_name": ["imagen1", "imagen2"],
       "height": [480]
     },
+    "filter": {
+      "file_name": ["imagen1", "imagen2"],
+      "height": [480]
+    },
     "match_all": true
-  }
+}
