--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,9 @@ repos:
     hooks:
       - id: black
         additional_dependencies: ['click==8.0.4']
+
+  - repo: https://github.com/jorgenusan/pydepcheck.git
+    rev: v0.1.3
+    hooks:
+      - id: pydepcheck
+        args: ['--env-file', 'requirements.txt', '--env-name', 'cocotools']
