Refactor manipulation_config.json for consistent file name and height criteria

--- a/examples/manipulation_config.json
+++ b/examples/manipulation_config.json
@@ -1,10 +1,10 @@
 {
     "criteria": {
-      "file_name": ["imagen1", "imagen2"],
+      "file_name": ["image1", "image2"],
       "height": [480]
     },
     "filter": {
-      "file_name": ["imagen1", "imagen2"],
+      "file_name": ["image1", "image2"],
       "height": [480]
     },
     "match_all": true
