--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     hooks:
       - id: isort
         additional_dependencies: [toml]
+        args: ["--profile", "black"]
   - repo: https://github.com/pycqa/flake8.git
     rev: 7.0.0
     hooks:
